Intro image alignment fix

--- a/src/_includes/styles/blocks/_intro.css
+++ b/src/_includes/styles/blocks/_intro.css
@@ -58,5 +58,6 @@
 
   & img {
     filter: drop-shadow(0 0 5px rgb(0 0 0 / 20%));
+    align-self: end;
   }
 }
